# DiverseScore

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
diversescore/: __init__.py  shortcuts.py  utilities.py
diversescore/cmd/: arguments.py  diversescorecli.py
diversescore/ext/: bspace_calculator.py  ibm_calculator.py
diversescore/metrics/: GoalPredicateOrdering.py  ResourceCount.py  Stability.py  States.py  Uniqueness.py  __init__.py  base.py
diversescore/models/: MaxMean.py  MaxMin.py  MaxSum.py  NormalizedMaxSum.py  base.py
diversescore/patches/: diverscore.1.patch
