[tool.poetry]
name = "diversescore"
version = "0.2.0"
description = "Diverse score calculator for unified planning interface"
authors = ["MFaisalZaki <mustafa.faisal.eng@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
lark = "^1.1.9"
numpy = "1.26.4"
click = "^8.1.7"
setuptools= "^74.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
